Remove ECHILD error handling from WaitForExit*().

In https://chromium-review.googlesource.com/c/chromium/src/+/920799 the
WaitForExit*() calls were modified to handle the ECHILD error, which
will be returned by waitpid() if the process being waited on exits and
is reaped by a different thread.

The implementation was incorrect, and would return true (process exited)
in the case where no processes had exited, but |errno| happened to have
been left set to ECHILD by a previous system call.

The broken implementation passed the try-bots and waterfall thanks to
TestLauncher retries, since the relevant tests pass unless run after a
test that leave |errno| set to ECHILD.

Remove the ECHILD handling from WaitForExit*() and instead modify the
//base unit-test that requires it to do its own special handling.

Bug: 850941
Change-Id: I129c5b60428c9bc3eba0cb9e82846f0c45917f85
Reviewed-on: https://chromium-review.googlesource.com/1093974
Reviewed-by: Lei Zhang <thestig@chromium.org>
Commit-Queue: Wez <wez@chromium.org>
Cr-Commit-Position: refs/heads/master@{#566301}
Former-commit-id: 2c2caae3608757dee09e4f802ac002545d71bfad